Update docs for `$1`, assert removal, and recursion limits.

--- a/core/builtin/builtin.String.html
+++ b/core/builtin/builtin.String.html
@@ -22,7 +22,7 @@ guaranteed to always be valid utf-8.</p>
 immutable, and thus always create a new <code>String</code> instead of modifying the
 existing one.</p></div>
 <h2>Methods</h2>
-<h3 id='method.format'><code>define <a href='#method.format'>format</a>(args: 1...): String</code></h3>
+<h3 id='method.format'><code>define <a href='#method.format'>format</a>(args: $1...): String</code></h3>
 <div class='doc'><p>
 This creates a new <code>String</code> by processing <code>self</code> as a format. Format specifiers
 must be between braces (<code>{}</code>), and must be between <code>0</code> and <code>99</code>. Each format
