A new but bare-bones website generated by lily-sitegen.

--- a/core/builtin/builtin.File.html
+++ b/core/builtin/builtin.File.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.File : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.File - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class File</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class File</h1>
 <pre>(builtin) class File {  }</pre>
 <div class='doc'><p>
 The <code>File</code> class provides a wrapper over a C FILE * struct. A <code>File</code> is closed
@@ -81,6 +89,11 @@ Attempt to write the contents of <code>data</code> to the file provided.</p>
 <ul>
 <li>If <code>self</code> is closed or is not open for writing, <code>IOError</code> is raised.</li>
 </ul></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
