--- a/core/builtin/builtin.String.html
+++ b/core/builtin/builtin.String.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.String : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.String - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class String</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class String</h1>
 <pre>(builtin) class String {  }</pre>
 <div class='doc'><p>
 The <code>String</code> class provides a wrapper over a C char *. The <code>String</code> class is
@@ -135,6 +143,11 @@ returns <code>self</code>.</p></div>
 <div class='doc'><p>
 Checks if any characters within self are within [a-z]. If so, it creates a new
 <code>String</code> with [a-z] replaced by [A-Z]. Otherwise, <code>self</code> is returned.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
