--- a/core/builtin/module.builtin.html
+++ b/core/builtin/module.builtin.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Module builtin</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Module builtin</h1>
 <div class='doc'><p>
 The builtin package provides the classes, vars, and functions that form the
 foundation of Lily.</p></div>
@@ -191,6 +199,11 @@ Provides a wrapper around the <code>stderr</code> present within C.</p></div>
 <h3 id='var.stdout'><code>var <a href='#var.stdout'>stdout</a>: File</code></h3>
 <div class='doc'><p>
 Provides a wrapper around the <code>stdout</code> present within C.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
