--- a/core/module.core.html
+++ b/core/module.core.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core : Lily</title>
-        <link href="../docstyle.css" rel="stylesheet">
+
+        <title>core - Lily</title>
+
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../css/docstyle.css" rel="stylesheet">
+
+        <script src="../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Module core</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Module core</h1>
 <div class='doc'><p>
 Psuedo root of all pre-registered modules.</p>
 <p>This is a fake module created to link together all of the modules that are
@@ -49,6 +57,11 @@ The sys package provides access to the arguments given to Lily.</td>
 The time package provides access to basic time information on the system.</td>
 </tr>
 </tbody></table>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../js/jquery.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/docs.min.js"></script>
     </body>
 </html>
