--- a/core/time/class.Time.html
+++ b/core/time/class.Time.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.time.Time : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>time.Time - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Time</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Time</h1>
 <pre>(foreign) class Time {
     struct tm local;
 }</pre>
@@ -34,6 +42,11 @@ Return a <code>String</code> representation of a <code>Time</code> instance.</p>
 <h3 id='method.since_epoch'><code>define <a href='#method.since_epoch'>since_epoch</a>: Integer</code></h3>
 <div class='doc'><p>
 Returns the value of <code>self</code> as a number of seconds since the epoch.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
