--- a/core/builtin/builtin.Boolean.html
+++ b/core/builtin/builtin.Boolean.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Boolean : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Boolean - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Boolean</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Boolean</h1>
 <pre>(builtin) class Boolean {  }</pre>
 <div class='doc'><p>
 The <code>Boolean</code> class represents a value that is either <code>true</code> or <code>false</code>.</p></div>
@@ -23,6 +31,11 @@ Convert a <code>Boolean</code> to an <code>Integer</code>. <code>true</code> bec
 <h3 id='method.to_s'><code>define <a href='#method.to_s'>to_s</a>: String</code></h3>
 <div class='doc'><p>
 Convert a <code>Boolean</code> to a <code>String</code>.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
