--- a/core/builtin/builtin.Byte.html
+++ b/core/builtin/builtin.Byte.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Byte : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Byte - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Byte</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Byte</h1>
 <pre>(builtin) class Byte {  }</pre>
 <div class='doc'><p>
 The <code>Byte</code> class represents a wrapper over a single <code>Byte</code> value. A <code>Byte</code> value
@@ -22,6 +30,11 @@ using &#39;t&#39; as the suffix on an <code>Integer</code> value.</p></div>
 <h3 id='method.to_i'><code>define <a href='#method.to_i'>to_i</a>: Integer</code></h3>
 <div class='doc'><p>
 Convert a <code>Byte</code> to an <code>Integer</code>.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
