--- a/core/builtin/builtin.ByteString.html
+++ b/core/builtin/builtin.ByteString.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.ByteString : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.ByteString - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class ByteString</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class ByteString</h1>
 <pre>(builtin) class ByteString {  }</pre>
 <div class='doc'><p>
 The <code>ByteString</code> class represents a bag of bytes. A <code>ByteString</code> may have &#39;\0&#39;
@@ -41,6 +49,11 @@ with <code>-1</code> being considered the last element.</p>
 <li>Either <code>start</code> or <code>stop</code> is out of range.</li>
 <li>The <code>start</code> is larger than the <code>stop</code> (reversed).</li>
 </ul></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
