--- a/core/builtin/builtin.Double.html
+++ b/core/builtin/builtin.Double.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Double : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Double - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Double</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Double</h1>
 <pre>(builtin) class Double {  }</pre>
 <div class='doc'><p>
 The <code>Double</code> class exists as a wrapper over a C double.</p></div>
@@ -21,6 +29,11 @@ The <code>Double</code> class exists as a wrapper over a C double.</p></div>
 <div class='doc'><p>
 Convert a <code>Double</code> to an <code>Integer</code>. This is done internally through a cast from
 a C double, to int64_t, the type of <code>Integer</code>.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
