--- a/core/builtin/builtin.Dynamic.html
+++ b/core/builtin/builtin.Dynamic.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Dynamic : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Dynamic - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Dynamic</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Dynamic</h1>
 <pre>(builtin) class Dynamic {  }</pre>
 <div class='doc'><p>
 The <code>Dynamic</code> class allows defering type checking until runtime. Creation of
@@ -24,6 +32,11 @@ only holds class information at runtime.</p></div>
 <h2>Methods</h2>
 <h3 id='method.&lt;new&gt;'><code>define <a href='#method.&lt;new&gt;'>&lt;new&gt;</a>(value: A): Dynamic <i>constructor</i></code></h3>
 <div class='doc'><p></p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
