--- a/core/builtin/builtin.Function.html
+++ b/core/builtin/builtin.Function.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Function : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Function - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Function</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Function</h1>
 <pre>(builtin) class Function {  }</pre>
 <div class='doc'><p>
 The <code>Function</code> class represents a block of code to be called, which may or may
@@ -22,6 +30,11 @@ as arguments, placed into a <code>List</code>, and so on.</p>
 colon at the end to denote the value returned:</p>
 <p><code>Function(Integer): String</code> (return <code>String</code>).</p>
 <p><code>Function(String, String)</code> (no value returned).</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
