--- a/core/builtin/builtin.Hash.html
+++ b/core/builtin/builtin.Hash.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Hash : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Hash - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Hash</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Hash</h1>
 <pre>(builtin) class Hash[A, B] {  }</pre>
 <div class='doc'><p>
 The <code>Hash</code> class provides a mapping between a key and a value. <code>Hash</code> values can
@@ -77,6 +85,11 @@ function is a newly-made <code>Hash</code> containing all values for which <code
 <h3 id='method.size'><code>define <a href='#method.size'>size</a>: Integer</code></h3>
 <div class='doc'><p>
 Returns the number of key+value pairs present within <code>self</code>.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
