--- a/core/builtin/builtin.Integer.html
+++ b/core/builtin/builtin.Integer.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Integer : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Integer - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Integer</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Integer</h1>
 <pre>(builtin) class Integer {  }</pre>
 <div class='doc'><p>
 The <code>Integer</code> class is Lily&#39;s native numeric type. Internally, it is a wrapper
@@ -31,6 +39,11 @@ the <code>Double</code> type (a raw C double).</p></div>
 <h3 id='method.to_s'><code>define <a href='#method.to_s'>to_s</a>: String</code></h3>
 <div class='doc'><p>
 Convert an <code>Integer</code> to a <code>String</code> using base-10.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
