--- a/core/builtin/builtin.List.html
+++ b/core/builtin/builtin.List.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.List : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.List - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class List</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class List</h1>
 <pre>(builtin) class List[A] {  }</pre>
 <div class='doc'><p>
 The <code>List</code> class represents a container of a given type, written as
@@ -116,6 +124,11 @@ with <code>-1</code> being considered the last element.</p>
 <h3 id='method.unshift'><code>define <a href='#method.unshift'>unshift</a>(value: A)</code></h3>
 <div class='doc'><p>
 Inserts value at the front of self, moving all other elements to the right.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
