--- a/core/builtin/builtin.Tuple.html
+++ b/core/builtin/builtin.Tuple.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Tuple : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Tuple - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Tuple</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Tuple</h1>
 <pre>(builtin) class Tuple {  }</pre>
 <div class='doc'><p>
 The <code>Tuple</code> class provides a fixed-size container over a set of types. <code>Tuple</code>
@@ -21,6 +29,11 @@ complex.</p>
 <p><code>Tuple</code> literals are created by <code>&lt;[value1, value2, ...]&gt;</code>. Member of the <code>Tuple</code>
 class can be accessed through subscripts. Unlike <code>List</code>, <code>Tuple</code> does not
 support negative indexes.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
