--- a/core/builtin/enum.Option.html
+++ b/core/builtin/enum.Option.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.builtin.Option : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>builtin.Option - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Enum Option</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Enum Option</h1>
 <pre>enum Option[A] {
     Some(A),
     None
@@ -66,6 +74,11 @@ If <code>self</code> is a <code>Some</code>, this returns the value with <code>s
 <div class='doc'><p>
 If <code>self</code> is a <code>Some</code>, this returns the value with <code>self</code>.</p>
 <p>Otherwise, this returns the result of calling <code>fn</code>.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
