--- a/core/random/class.Random.html
+++ b/core/random/class.Random.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.random.Random : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>random.Random - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Class Random</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Class Random</h1>
 <pre>(foreign) class Random {
     unsigned long long mt[NN];
     int mti;
@@ -32,6 +40,11 @@ Generate a random <code>Integer</code> value between <code>lower</code> and <cod
 <ul>
 <li><code>ValueError</code> is raised if the range is empty, or reversed.</li>
 </ul></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
