--- a/core/random/module.random.html
+++ b/core/random/module.random.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.random : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>random - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Module random</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Module random</h1>
 <div class='doc'><p>
 The random package provides access to a Mersenne Twister for pseudo-random
 number generation.</p></div>
@@ -25,6 +33,11 @@ The <code>Random</code> class provides access to the random number generator. Ea
 instance is completely separate from all others.</td>
 </tr>
 </tbody></table>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
