--- a/core/sys/module.sys.html
+++ b/core/sys/module.sys.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.sys : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>sys - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Module sys</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Module sys</h1>
 <div class='doc'><p>
 The sys package provides access to the arguments given to Lily.</p></div>
 <h2>Functions</h2>
@@ -35,6 +43,11 @@ Attempt to set <code>limit</code> as the maximum recursion limit.</p>
 <div class='doc'><p>
 This contains arguments sent to the program through the command-line. If Lily
 was not invoked from the command-line (ex: mod_lily), then this is empty.</p></div>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
