--- a/core/time/module.time.html
+++ b/core/time/module.time.html
@@ -5,14 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>core.time : Lily</title>
-        <link href="../../docstyle.css" rel="stylesheet">
+
+        <title>time - Lily</title>
+
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../css/bootstrap-theme.min.css" rel="stylesheet">
+
+        <link href="../../css/docstyle.css" rel="stylesheet">
+
+        <script src="../../js/ie-emulation-modes-warning.js"></script>
     </head>
 
     <body role="document">
-        <section id='main'>
-<h1>Module time</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h1>Module time</h1>
 <div class='doc'><p>
 The time package provides access to basic time information on the system.</p></div>
 <h2>Classes</h2>
@@ -24,6 +32,11 @@ Instances of this class represent a single point in time. This class also
 includes static methods to provide a few extra features.</td>
 </tr>
 </tbody></table>
-        </section>
+        </div>
+    </div>
+</div>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/bootstrap.min.js"></script>
+        <script src="../../js/docs.min.js"></script>
     </body>
 </html>
