Add the tutorial to the site.

--- a/intro-sandbox.html
+++ b/intro-sandbox.html
@@ -142,6 +142,15 @@ lines.each(|l| print("{0}: {1}".format(l, rpn(l)) ) )
 <li class="nav-header">Intro</li>
 <li><a href="index.html">Welcome</a></li>
 <li class="active"><a href="intro-sandbox.html">Sandbox</a></li>
+<li class="nav-header">Tutorial</li>
+<li><a href="tutorial-install.html">Install</a></li>
+<li><a href="tutorial-basics.html">Basics</a></li>
+<li><a href="tutorial-functions.html">Functions</a></li>
+<li><a href="tutorial-classes.html">Classes</a></li>
+<li><a href="tutorial-exceptions.html">Exceptions</a></li>
+<li><a href="tutorial-generics.html">Generics</a></li>
+<li><a href="tutorial-enums.html">Enums</a></li>
+<li><a href="tutorial-import.html">Import</a></li>
 <li class="nav-header">Reference</li>
 <li><a href="core/module.core.html">Modules</a></li>
                             </ul>
