Add api documentation using NaturalDocs.

--- a/tutorial-import.html
+++ b/tutorial-import.html
@@ -36,6 +36,7 @@
 <li><a href="tutorial-enums.html">Enums</a></li>
 <li class="active"><a href="tutorial-import.html">Import</a></li>
 <li class="nav-header">Reference</li>
+<li><a href="api/index.html">lily.h api</a></li>
 <li><a href="core/module.core.html">Modules</a></li>
                     </ul>
                 </div>
