--- a/intro-sandbox.html
+++ b/intro-sandbox.html
@@ -152,6 +152,7 @@ lines.each(|l| print("{0}: {1}".format(l, rpn(l)) ) )
 <li><a href="tutorial-enums.html">Enums</a></li>
 <li><a href="tutorial-import.html">Import</a></li>
 <li class="nav-header">Reference</li>
+<li><a href="api/index.html">lily.h api</a></li>
 <li><a href="core/module.core.html">Modules</a></li>
                             </ul>
                         </div>
