--- a/tutorial-classes.html
+++ b/tutorial-classes.html
@@ -35,6 +35,9 @@
 <li><a href="tutorial-generics.html">Generics</a></li>
 <li><a href="tutorial-enums.html">Enums</a></li>
 <li><a href="tutorial-import.html">Import</a></li>
+<li class="nav-header">Tools</li>
+<li><a href="tooling-bindgen.html">Bindgen</a></li>
+<li><a href="tooling-docgen.html">Docgen</a></li>
 <li class="nav-header">Reference</li>
 <li><a href="api/index.html">lily.h api</a></li>
 <li><a href="core/module.core.html">Modules</a></li>
