--- a/intro-sandbox.html
+++ b/intro-sandbox.html
@@ -157,6 +157,8 @@ lines.each(|l| print("{0}: {1}".format(l, rpn(l)) ) )
 <li class="nav-header">Reference</li>
 <li><a href="api/index.html">lily.h api</a></li>
 <li><a href="core/module.core.html">Modules</a></li>
+<li class="nav-header">Source</li>
+<li><a href="https://github.com/FascinatedBox/lily">GitHub</a></li>
                             </ul>
                         </div>
                     </div>
