--- a/tutorial-exceptions.html
+++ b/tutorial-exceptions.html
@@ -41,6 +41,8 @@
 <li class="nav-header">Reference</li>
 <li><a href="api/index.html">lily.h api</a></li>
 <li><a href="core/module.core.html">Modules</a></li>
+<li class="nav-header">Source</li>
+<li><a href="https://github.com/FascinatedBox/lily">GitHub</a></li>
                     </ul>
                 </div>
             </div>
