Update docs for IndexError correction (#361).

--- a/core/builtin/class.IndexError.html
+++ b/core/builtin/class.IndexError.html
@@ -23,8 +23,9 @@
             <h1>Class IndexError</h1>
 <pre>(builtin) class IndexError {  }</pre>
 <div class='doc'><p>
-The <code>DivisionByZeroError</code> is a subclass of <code>Exception</code> that is raised when
-trying to divide or modulo by zero.</p></div>
+<code>IndexError</code> is a subclass of <code>Exception</code> that is raised when
+attempting to access an index that is out-of-bounds (too low or too high, after
+accounting for negative wraparound).</p></div>
 <h2>Methods</h2>
 <h3 id='method.&lt;new&gt;'><code>define <a href='#method.&lt;new&gt;'>&lt;new&gt;</a>(message: String): IndexError <i>constructor</i></code></h3>
 <div class='doc'><p></p></div>
