--- a/core/builtin/module.builtin.html
+++ b/core/builtin/module.builtin.html
@@ -148,8 +148,9 @@ properties: A <code>message</code> as <code>String</code>, and a <code>traceback
 <tr>
 <td><a class='reflink' href='class.IndexError.html'>IndexError</a></td>
 <td>
-The <code>DivisionByZeroError</code> is a subclass of <code>Exception</code> that is raised when
-trying to divide or modulo by zero.</td>
+<code>IndexError</code> is a subclass of <code>Exception</code> that is raised when
+attempting to access an index that is out-of-bounds (too low or too high, after
+accounting for negative wraparound).</td>
 </tr>
 <tr>
 <td><a class='reflink' href='class.IOError.html'>IOError</a></td>
