Update for removal of Dynamic.

--- a/tutorial-basics.html
+++ b/tutorial-basics.html
@@ -294,7 +294,7 @@ written out.</p>
 guarantee an ordering to the contents it writes out.</p>
 <p>Non-scoped variants print just their name and their contents. Scoped variants
 print out the enum name and a dot first.</p>
-<p>Classes ( <code>Dynamic</code> included ) print out their address.</p>
+<p>Classes print out their address.</p>
         </div>
     </div>
 </div>
